# blog-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/core/utils/: database_types.py  timezone.py
app/db/: base.py  session.py
app/db/models/: __init__.py  otp.py  post.py  user.py
migrations/: env.py  script.py.mako
migrations/versions/: 792275f082f3_initial_migration.py
scripts/: ensure_bucket.py
scripts/pgadmin/: pgpass  servers.json
