[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.36",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "redis>=8.0.1",
    "sqlalchemy-utils>=0.42.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
